# RemoteWSI

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_LOCAL.md  SECURITY.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cache.py  color_normalization.py  config.py  dz.py  fs_index.py  local_launcher.py  local_main.py  main.py  models.py  path_cache.py  thumbs.py
app/templates/: index.html  local_viewer.html
docs/: appendix_local_wsi_viewer_cn.md  open_source_release_checklist.md
docs/releases/: v1.0.0_RELEASE_NOTES.md
scripts/: build-source-release.ps1  build-windows-bundle.ps1  perf_benchmark.py  run-local-viewer.ps1  run-remote-viewer.sh  test-color-normalization-ui.ps1  test-color-normalization.ps1  test-local-package-import.ps1  test-local-perf.ps1  test-local-ui.ps1  test-local-viewer.ps1  test-remote-streaming.ps1  ui_color_norm_smoke_test.py  ui_smoke_test.py
